feat: completed,rewards, and settings

--- a/src/app.css
+++ b/src/app.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer utilities {
+	:root {
+		--brand-color: var(--toastBarBackground) !important;
+	}
+}
